Use a proper HTTP client when discovering federated IS to avoid 4xx's